# crypto_trading

./: .gitignore  Cargo.toml  rustfmt.toml  setting.example.toml
src/: lib.rs  main.rs
src/binance/: api.rs  client.rs  data_stream.rs  mod.rs  websocket.rs
src/btc_analysis/: client.rs  structs.rs
src/shared/: config.rs  csv_schema.rs  mod.rs  utils.rs
src/strategy/: mod.rs  turtle_trade.rs
