[package]
name = "crypto_trading"
version = "0.1.0"
authors = ["zhenjier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
jsonrpc = "0.12.0"
anyhow = "1.0.40"
serde = {version = "1.0.125", features=["derive"]}