[package]
name = "crypto_trading"
version = "0.1.0"
authors = ["zhenjier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0.64"
jsonrpc = "0.12.0"
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
hmac = "0.11.0"
sha2 = "0.9.3"
config = "0.11.0"
hex = "0.4.3"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
futures = "0.3.14"
crossbeam-channel = "0.5.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
